--- a/package.json
+++ b/package.json
@@ -6,22 +6,32 @@
     "hoek": "^5.0.4"
   },
   "devDependencies": {
+    "@babel/core": "7.2.2",
+    "@babel/polyfill": "7.2.5",
+    "@babel/preset-env": "7.2.3",
     "browser-sync": "^2.26.3",
     "emitter-steward": "^1.0.0",
     "eslint": "5.11.1",
     "eslint-config-htmlacademy": "0.5.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-better-rollup": "3.4.0",
     "gulp-clean": "^0.4.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-plumber": "1.2.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "2.6.4",
     "gulp-uglify": "^3.0.1",
-    "pump": "^3.0.0",
     "require-dir": "1.2.0",
+    "rollup-plugin-babel": "4.1.0",
+    "rollup-plugin-commonjs": "9.2.0",
+    "rollup-plugin-node-resolve": "4.0.0",
     "run-sequence": "^2.2.1",
+    "scroll-into-view": "1.9.3",
     "stylelint": "9.9.0",
-    "stylelint-config-htmlacademy": "0.1.1"
+    "stylelint-config-htmlacademy": "0.1.1",
+    "tocbot": "4.4.2"
   },
   "scripts": {
     "build": "gulp build",
