--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emitter-steward": "^1.0.0",
     "eslint": "5.11.1",
     "eslint-config-htmlacademy": "0.5.2",
+    "gsap": "2.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-better-rollup": "3.4.0",
