--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "scroll-into-view": "1.9.3",
     "stylelint": "9.9.0",
     "stylelint-config-htmlacademy": "0.1.1",
-    "tocbot": "4.4.2"
+    "tocbot": "git@github.com:regulyarniy/tocbot.git"
   },
   "scripts": {
     "build": "gulp build",
