--- a/package.json
+++ b/package.json
@@ -9,35 +9,47 @@
     "@babel/core": "7.2.2",
     "@babel/polyfill": "7.2.5",
     "@babel/preset-env": "7.2.3",
-    "browser-sync": "^2.26.3",
-    "emitter-steward": "^1.0.0",
-    "eslint": "5.11.1",
+    "@htmlacademy/editorconfig-cli": "1.0.0",
+    "autoprefixer": "9.4.5",
+    "babel-loader": "8.0.5",
+    "browser-sync": "2.26.3",
+    "css-mqpacker": "7.0.0",
+    "del": "3.0.0",
+    "eslint": "5.12.0",
     "eslint-config-htmlacademy": "0.5.2",
     "gsap": "2.0.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-better-rollup": "3.4.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-cssnano": "^2.1.3",
+    "gulp": "4.0.0",
+    "gulp-clean-css": "4.0.0",
+    "gulp-empty-pipe": "5.0.0",
+    "gulp-imagemin": "5.0.3",
     "gulp-plumber": "1.2.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-postcss": "8.0.0",
+    "gulp-posthtml": "3.0.4",
+    "gulp-rename": "1.4.0",
+    "gulp-sass": "4.0.2",
     "gulp-sourcemaps": "2.6.4",
-    "gulp-uglify": "^3.0.1",
+    "gulp-svgmin": "2.1.0",
+    "gulp-svgstore": "7.0.1",
+    "gulp-webp": "4.0.0",
     "nodelist-foreach-polyfill": "1.2.0",
-    "require-dir": "1.2.0",
-    "rollup-plugin-babel": "4.1.0",
-    "rollup-plugin-commonjs": "9.2.0",
-    "rollup-plugin-node-resolve": "4.0.0",
-    "run-sequence": "^2.2.1",
+    "normalize-scss": "7.0.1",
+    "path": "0.12.7",
+    "picturefill": "3.0.3",
+    "posthtml-expressions": "1.1.0",
+    "posthtml-include": "1.2.0",
     "scroll-into-view": "1.9.3",
     "stylelint": "9.9.0",
     "stylelint-config-htmlacademy": "0.1.1",
-    "tocbot": "git@github.com:regulyarniy/tocbot.git"
+    "tocbot": "4.4.3",
+    "vinyl-named": "1.1.0",
+    "webpack-stream": "5.2.1"
   },
   "scripts": {
+    "editorconfig": "editorconfig-cli \"source/**/*.{js,html,scss}\"",
+    "stylelint": "stylelint \"source/css/**/*.scss\" --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
     "build": "gulp build",
-    "start": "gulp watch"
+    "start": "gulp start"
   },
   "repository": {
     "type": "git",
